# xr-gate

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md
apps/steamvr/spatial_overlay/: CMakeLists.txt  README.md
apps/steamvr/spatial_overlay/src/: xr_steamvr_spatial_overlay.cpp
apps/steamvr/spatial_scene/: CMakeLists.txt  README.md
apps/steamvr/spatial_scene/src/: xr_steamvr_spatial_scene.cpp
apps/steamvr/video_overlay/: CMakeLists.txt  README.md
apps/steamvr/video_overlay/src/: main.cpp
backends/basalt_vio/: .gitignore  CMakeLists.txt  README.md
backends/basalt_vio/docs/: MIGRATION.md
backends/basalt_vio/patches/basalt/: README.md  basalt_vio_integration.patch
backends/basalt_vio/scripts/linux/: install_basalt.sh  start_basalt.sh
backends/basalt_vio/src/: capture_basalt_backend.cpp
backends/basalt_vio/tools/debug/: xr_basalt_trajectory_viewer.py
backends/basalt_vio/tools/xr/: xr_dump_vio_config.cpp
backends/imu_3dof/: CMakeLists.txt  README.md
backends/imu_3dof/docs/: MIGRATION.md
backends/imu_3dof/scripts/linux/: install_imu_3dof.sh  start_imu_3dof_backend.sh
backends/imu_3dof/src/: imu_3dof_backend.cpp
backends/mercury_hand_tracking/: CMakeLists.txt  README.md
backends/mercury_hand_tracking/docs/: MIGRATION.md
backends/mercury_hand_tracking/include/mercury_hand_tracking/: mercury_runtime_loader.hpp
backends/mercury_hand_tracking/patches/monado/: README.md  mercury_xr_upstream_changes.patch
backends/mercury_hand_tracking/scripts/linux/: download_mercury_models.sh  install_mercury.sh  start_hand_tracking.sh
backends/mercury_hand_tracking/src/: capture_hand_tracking_backend.cpp
backends/mercury_hand_tracking/tools/debug/: mercury_xr_raw2d_overlay_viewer.py
backends/xr_spatial/: CMakeLists.txt  README.md
backends/xr_spatial/configs/: xr_spatial_reference.yaml  xreal_air2ultra_unified_480_xr_spatial.yaml
backends/xr_spatial/configs/profiles/: reference.env  xreal_air2ultra_unified_480.env
backends/xr_spatial/include/xr_spatial_backend/: calibration.hpp  pointcloud_filter.hpp  pointcloud_map.hpp  pose_math.hpp  pose_reader.hpp  spatial_proxy_mesh_builder.hpp  stereo_depth_processor.hpp  types.hpp
backends/xr_spatial/scripts/linux/: install_xr_spatial.sh  start_xr_spatial.sh  start_xr_spatial_scan.sh  start_xr_spatial_shm.sh  xr_spatial_profile.sh
backends/xr_spatial/src/: calibration.cpp  pointcloud_filter.cpp  pointcloud_map.cpp  pose_reader.cpp  spatial_proxy_mesh_builder.cpp  stereo_depth_processor.cpp  xr_spatial_backend.cpp
bridges/: CMakeLists.txt  README.md
bridges/capture_net/src/: capture_net_bridge.cpp
bridges/docs/: MIGRATION.md
bridges/scripts/linux/: cleanup_old_flat_sources.sh  install_bridges.sh  start_capture_net_bridge.sh  start_tracking_udp_bridge.sh  start_tracking_udp_debug_receiver.sh
bridges/tracking_udp/src/: spatial_proxy_mesh_udp_debug_receiver.cpp  tracking_udp_bridge.cpp  tracking_udp_debug_receiver.cpp
capture_client/: __init__.py  client.py  messages.py  pyproject.toml  shm_ring.py  shm_transport.py  stream_defs.py  sync.py  tcp_transport.py  transport.py
capture_client/debug/: direct_slam_viewer_shm.sh  direct_slam_viewer_tcp.sh  xreal_slam_viewer.py
capture_service_cpp/: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
capture_service_cpp/include/capture_service_cpp/: camera_pipeline.hpp  common.hpp  imu_pipeline.hpp  shm_publisher.hpp  stream_publishers.hpp  tcp_fanout.hpp
capture_service_cpp/include/capture_service_cpp/platform/: camera_capture.hpp  capabilities.hpp  hid_input_device.hpp  process.hpp  runtime_defaults.hpp
capture_service_cpp/scripts/linux/: build_capture_service_cpp.sh
capture_service_cpp/scripts/windows/: build_capture_service_cpp.ps1  start_capture_service_tcp.ps1
capture_service_cpp/src/: camera_pipeline.cpp  common.cpp  imu_pipeline.cpp  main.cpp  stream_publishers.cpp  tcp_fanout.cpp
capture_service_cpp/src/platform/: hidapi_input_device.cpp
capture_service_cpp/src/platform/linux/: camera_capture_linux.cpp  capabilities_linux.cpp  process_linux.cpp  runtime_defaults_linux.cpp  (+1 more)
drivers/monado_driver/: CMakeLists.txt  README.md
drivers/monado_driver/src/: posix_runtime_readers.cpp  runtime_readers.cpp  windows_runtime_readers.cpp  xr_monado_driver.cpp  xr_monado_driver_interface.h
drivers/openvr_driver/: CMakeLists.txt  README.md  driver.vrdrivermanifest
drivers/openvr_driver/resources/: driver.vrresources
drivers/openvr_driver/scripts/: build_and_register_driver.sh  build_driver.sh  register_driver.sh
drivers/openvr_driver/src/: driver_xr_tracking.cpp  runtime_controller_state_reader.cpp  runtime_controller_state_reader.hpp  runtime_hand_contract.hpp  runtime_hand_reader.cpp  runtime_hand_reader.hpp  runtime_pose_reader.cpp  runtime_pose_reader.hpp
override_controller/: CMakeLists.txt  README.md
override_controller/configs/: README.md
override_controller/include/xr_override_controller/: config_io.hpp  controller_input_publisher.hpp  input_provider.hpp  types.hpp
override_controller/scripts/linux/: install_override_controller.sh  start_override_controller.sh  watch_controller_input_stream.py
override_controller/scripts/windows/: build_override_controller.ps1  start_override_controller_tcp.ps1
override_controller/src/: main.cpp
override_controller/src/core/: config_io.cpp  controller_input_publisher.cpp  types.cpp
override_controller/src/platform/: input_provider.cpp
runtime_adapters/xr_runtime_adapter/: CMakeLists.txt  README.md
runtime_adapters/xr_runtime_adapter/configs/: xr_21_joint_hand_viewer_verified_controllers.json  xr_runtime_adapter_transform_config.md
runtime_adapters/xr_runtime_adapter/src/: body_tracker_stability_filter.cpp  body_tracker_stability_filter.hpp  coordinate_util.cpp  coordinate_util.hpp  gestures.cpp  gestures.hpp  hand_pose_stability_filter.hpp  hmd_pose_stability_filter.cpp  hmd_pose_stability_filter.hpp  jitter_filter.cpp  jitter_filter.hpp  override_controller.cpp  override_controller.hpp  xr_runtime_adapter.cpp
tools/xreal_ultra/xreal_display_helper/: CMakeLists.txt  README.md
(+212 files in other folders)
