[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xr-capture-client"
version = "0.2.0"
description = "Python reader SDK for XR capture_service SHM/TCP streams"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["capture_client*"]
